examples/misc/error/compilation/syntax_letrec_top.bfr
let rec r = let f _ = r in f 0

let main = []